Switching to MIT license

--- a/MatrixComparison/src/Matrix/OCamlExtractionComparison/Makefile
+++ b/MatrixComparison/src/Matrix/OCamlExtractionComparison/Makefile
@@ -1,3 +1,7 @@
+# Copyright 2022 ZhengPu Shi
+#  This file is part of coq-matrix. It is distributed under the MIT
+#  "expat license". You should have recieved a LICENSE file with it.
+#
 
 matrix : matrix.ml
 	@ocamlc -c matrix.mli
