--- a/MatrixComparison/src/Matrix/NatFun/ocaml_test/Makefile
+++ b/MatrixComparison/src/Matrix/NatFun/ocaml_test/Makefile
@@ -1,3 +1,7 @@
+# Copyright 2022 ZhengPu Shi
+#  This file is part of coq-matrix. It is distributed under the MIT
+#  "expat license". You should have recieved a LICENSE file with it.
+
 
 
 mat_test.exe : mat_test.ml mat.cmo inv.cmo
